{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 31,
  "lineage": "f7e0a1d3-7a19-aa59-b1ba-5fa967d4badf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0528b6ca62efd2cdd",
            "arn": "arn:aws:ec2:us-west-2:376945888930:elastic-ip/eipalloc-0528b6ca62efd2cdd",
            "association_id": "eipassoc-090346c5531ba6a5c",
            "domain": "vpc",
            "id": "eipalloc-0528b6ca62efd2cdd",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b0b08fe86106b7e4",
            "private_dns": "ip-10-0-1-206.us-west-2.compute.internal",
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-54-200-88-66.us-west-2.compute.amazonaws.com",
            "public_ip": "54.200.88.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:internet-gateway/igw-0d0f8567df73520d4",
            "id": "igw-0d0f8567df73520d4",
            "owner_id": "376945888930",
            "tags": {
              "Name": "igw-three-tier-webapp-oluwa"
            },
            "tags_all": {
              "Name": "igw-three-tier-webapp-oluwa"
            },
            "vpc_id": "vpc-07ac6150a6fca1495"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0528b6ca62efd2cdd",
            "association_id": "eipassoc-090346c5531ba6a5c",
            "connectivity_type": "public",
            "id": "nat-0b47a72ed2154316f",
            "network_interface_id": "eni-0b0b08fe86106b7e4",
            "private_ip": "10.0.1.206",
            "public_ip": "54.200.88.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fdab210ccd8908d",
            "tags": {
              "Name": "nat-gateway-oluwa"
            },
            "tags_all": {
              "Name": "nat-gateway-oluwa"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:route-table/rtb-0ce5e3a4e54903c2e",
            "id": "rtb-0ce5e3a4e54903c2e",
            "owner_id": "376945888930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b47a72ed2154316f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-oluwa"
            },
            "tags_all": {
              "Name": "private-route-table-oluwa"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac6150a6fca1495"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:route-table/rtb-02abee67864c85875",
            "id": "rtb-02abee67864c85875",
            "owner_id": "376945888930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0f8567df73520d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-oluwa"
            },
            "tags_all": {
              "Name": "public-route-table-oluwa"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac6150a6fca1495"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_backend_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bacef08ffb92e45",
            "route_table_id": "rtb-0ce5e3a4e54903c2e",
            "subnet_id": "subnet-0dd7a4e898a93dc7b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route",
            "aws_subnet.private_backend_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_database_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdb62406c300d9b6",
            "route_table_id": "rtb-0ce5e3a4e54903c2e",
            "subnet_id": "subnet-061eb619eab8e9c17"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route",
            "aws_subnet.private_database_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01601dcfe050c3e74",
            "route_table_id": "rtb-02abee67864c85875",
            "subnet_id": "subnet-08fdab210ccd8908d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:subnet/subnet-0dd7a4e898a93dc7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd7a4e898a93dc7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376945888930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-backend-subnet-oluwa"
            },
            "tags_all": {
              "Name": "private-backend-subnet-oluwa"
            },
            "vpc_id": "vpc-07ac6150a6fca1495"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:subnet/subnet-061eb619eab8e9c17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061eb619eab8e9c17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376945888930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-database-subnet-oluwa"
            },
            "tags_all": {
              "Name": "private-database-subnet-oluwa"
            },
            "vpc_id": "vpc-07ac6150a6fca1495"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:subnet/subnet-08fdab210ccd8908d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fdab210ccd8908d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376945888930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-oluwa"
            },
            "tags_all": {
              "Name": "public-subnet-oluwa"
            },
            "vpc_id": "vpc-07ac6150a6fca1495"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376945888930:vpc/vpc-07ac6150a6fca1495",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a007d0d116eec1bc",
            "default_route_table_id": "rtb-011fca63d287e5e3d",
            "default_security_group_id": "sg-03552033967bd2017",
            "dhcp_options_id": "dopt-0db47e5da1f56b7b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ac6150a6fca1495",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011fca63d287e5e3d",
            "owner_id": "376945888930",
            "tags": {
              "Name": "vpc-three-tier-webapp-oluwa"
            },
            "tags_all": {
              "Name": "vpc-three-tier-webapp-oluwa"
            }
          }
        }
      ]
    }
  ]
}